-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.3.0
-
None
-
eaf069902111533f0e675ab32279bb57a5916169 (stable. 28.5.2014, 5.3.1)
If Qt is configured with qtlibinfix, then windeployqt does not find the libraries. Here is the verbose output:
C:\Qt\5.3.0_libinfix_2012\qtbase\examples\widgets\layouts\basiclayouts>windeployqt.exe --verbose 2 debug/basiclayouts.exe Qt binaries in C:\Qt\5.3.0_libinfix_2012\qtbase\bin readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/examples/widgets/layouts/basiclayouts/debug/basiclayouts.exe 32 bit, debug: 1 readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/bin/Qt5Widgetsmylibd.dll 32 bit, debug: 1 readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/bin/Qt5Guimylibd.dll 32 bit, debug: 1 readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/bin/Qt5Coremylibd.dll 32 bit,debug: 1 C:\Qt\5.3.0_libinfix_2012\qtbase\examples\widgets\layouts\basiclayouts\debug\basiclayouts.exe 32 bit, debug executable readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/bin/Qt5Coremylibd.dll 32 bit, debug: 1 Direct dependencies: Qt5Core Qt5Widgets All dependencies : Qt5Core Qt5Gui Qt5Widgets To be deployed : Qt5Core Qt5Gui Qt5Widgets readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/accessible/qtaccessiblequickd.dll 32 bit, debug: 1 readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/accessible/qtaccessiblewidgetsd.dll 32 bit, debug: 1 readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/iconengines/qsvgicond.dll 32 bit, debug: 1 readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/imageformats/qgifd.dll 32 bit, debug: 1 readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/imageformats/qicod.dll 32 bit, debug: 1 readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/imageformats/qjpegd.dll 32 bit, debug: 1 readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/imageformats/qsvgd.dll 32 bit, debug: 1 readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/platforms/qwindowsd.dll 32 bit, debug: 1 Plugins: C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/accessible/qtaccessiblequickd. dll,C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/accessible/qtaccessiblewidgetsd.dll ,C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/iconengines/qsvgicond.dll,C:/Qt/5.3.0_ libinfix_2012/qtbase/plugins/imageformats/qgifd.dll,C:/Qt/5.3.0_libinfix_2012/qt base/plugins/imageformats/qicod.dll,C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/imageformats/qjpegd.dll,C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/imageformats/qsvgd.dll,C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/platforms/qwindowsd.dll readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/plugins/platforms/qwindowsd.dll 32 bit, debug: 1 readPeExecutable: C:/Qt/5.3.0_libinfix_2012/qtbase/bin/libEGLd.dll 32 bit, debug: 1 Checking C:/Qt/5.3.0_libinfix_2012/qtbase/bin/Qt5Cored.dll, C:/Qt/5.3.0_libinfix_2012/qtbase/examples/widgets/layouts/basiclayouts/debug/Qt5Cored.dll C:\Qt\5.3.0_libinfix_2012\qtbase\bin\Qt5Cored.dll does not exist. C:\Qt\5.3.0_libinfix_2012\qtbase\examples\widgets\layouts\basiclayouts>