windeployqt: Observe qtlibinfix.

Determine qtlibinfix by checking on the Qt5Core library name
and re-apply that when building the module names.

Task-number: QTBUG-39297
Change-Id: I73d1253ddd803071f90199fa9aaee7328c7aae8c
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>